--- a/website/pages/docs/sdk/simulator.mdx
+++ b/website/pages/docs/sdk/simulator.mdx
@@ -138,7 +138,7 @@ Within framework of backend developers, they also do not need to be suffered fro
 
 
 
-## Confguration
+## Configuration
 <Tabs items={[
   <code>nestia.config.ts</code>, 
   <code>INestiaConfig.ts</code>,
