--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -57,7 +57,7 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
     - Automatic E2E test functions generator
   - `@nestia/e2e`: Test program utilizing e2e test functions
   - `@nestia/benchmark`: Benchmark program using e2e test functions
-  - `@nestia/migrate`: OpenAPI generator from Swagger to NestJS/SDK
+  - `@nestia/chat`: Super A.I. Chatbot by Swagger document
   - `@nestia/editor`: Swagger-UI with Online TypeScript Editor
   - `nestia`: Just CLI (command line interface) tool
 
