--- a/website/pages/docs/swagger/chat.mdx
+++ b/website/pages/docs/swagger/chat.mdx
@@ -131,7 +131,7 @@ pnpm install @nestia/agent @nestia/chat @samchon/openapi openai
   </Tabs.Tab>
   <Tabs.Tab>
 ```bash filename="Terminal"
-yarn @nestia/agent @nestia/chat @samchon/openapi openai
+yarn add @nestia/agent @nestia/chat @samchon/openapi openai
 ```
   </Tabs.Tab>
 </Tabs>
