--- a/website/pages/docs/swagger/chat.mdx
+++ b/website/pages/docs/swagger/chat.mdx
@@ -1,94 +1,4 @@
-import FaceIcon from "@mui/icons-material/Face";
-import SmartToyIcon from "@mui/icons-material/SmartToy";
-import { Card, CardContent, Chip } from "@mui/material";
 import { Callout, Tabs } from 'nextra/components'
-
-{/* ## Preface
-<br/>
-<div 
-  style={{
-    width: "100%",
-    padding: 15,
-    backgroundColor: "lightblue",
-  }}
->
-  <div 
-    style={{
-      display: "flex",
-      justifyContent: "flex-end",
-    }}
-  >
-    <Card 
-      elevation={3}
-      style={{
-        marginTop: 10,
-        marginBottom: 10,
-        marginLeft: "10%",
-        textAlign: "right",
-        backgroundColor: "lightyellow",
-      }}
-    >
-      <CardContent>
-        <Chip 
-          icon={<FaceIcon />} 
-          label={<b><u>User</u></b>} 
-          variant="outlined" 
-          color="primary" 
-        />
-        What you can do? Introduce yourself, please.
-      </CardContent>
-    </Card>
-  </div>
-  <div 
-    style={{
-      display: "flex",
-      justifyContent: "flex-start",
-    }}>
-    <Card 
-      elevation={3}
-      style={{
-        marginTop: 10,
-        marginBottom: 10,
-        marginRight: "10%",
-      }}
-    >
-      <CardContent>
-        <Chip 
-          icon={<SmartToyIcon />} 
-          label={<b><u>Assistant</u></b>} 
-          variant="outlined" 
-          color="success" 
-        />
-I can assist you with various functions related to shopping, including:
-
-1. **Order Management**
-   - Create new orders from a shopping cart or directly without a cart.
-   - List your existing orders.
-   - Get detailed information about a specific order.
-2. **Coupons and Discounts**
-   - List available coupons.
-   - Get details about specific coupons.
-   - Create new coupon tickets.
-3. **Sales and Reviews**
-   - List and get details about sales.
-   - Write questions and reviews for sales.
-
-If you have a specific action in mind or need help in a certain area, just let me know!
-      </CardContent>
-    </Card>
-  </div>
-</div>
-
-Chat with your backend server.
-
-You can build a Super A.I. chatbot application from swagger documents performing the LLM function calling.
-
-The super A.I. chatbot selects proper functions defined in the swagger document by analyzing conversation contexts with user. And then the super A.I. chatbot requests the user to write arguments for the selected functions by conversation text, and actually calls the API function with the arguments.
-
-If the swagger file you provide contains a reasonable level of functions, DTO schemas, and descriptions, everything is ready. Just deliver the swagger file to the Nestia A.I. Chatbot, you can start conversation with your backend server calling the API functions by chatting text. */}
-
-
-
 
 ## Super A.I. Chatbot
 <br/>
@@ -102,7 +12,7 @@ If the swagger file you provide contains a reasonable level of functions, DTO sc
 
 - Shopping A.I. Chatbot Application: [https://nestia.io/chat/shopping](/chat/shopping)
 - Shopping Backend Repository: https://github.com/samchon/shopping-backend
-- Shopping Swagger Document (`@nestia/editor`): https://shopping-be.wrtn.ai/editor/
+- Shopping Swagger Document (`@nestia/editor`): [https://nestia.io/editor/?url=...](https://nestia.io/editor/?simulate=true&e2e=true&url=https%3A%2F%2Fraw.githubusercontent.com%2Fsamchon%2Fshopping-backend%2Frefs%2Fheads%2Fmaster%2Fpackages%2Fapi%2Fswagger.json)
 
 The above demonstration video shows Shopping A.I. chatbot built with Nestia.
 
