Fix typo of /docs/swagger/chat

--- a/website/pages/docs/swagger/chat.mdx
+++ b/website/pages/docs/swagger/chat.mdx
@@ -10,17 +10,17 @@ import { Callout, Tabs } from 'nextra/components'
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
         allowfullscreen></iframe>
 
-- Shopping A.I. Chatbot Application: [https://nestia.io/chat/shopping](/chat/shopping)
-- Shopping Backend Repository: https://github.com/samchon/shopping-backend
-- Shopping Swagger Document (`@nestia/editor`): [https://nestia.io/editor/?url=...](https://nestia.io/editor/?simulate=true&e2e=true&url=https%3A%2F%2Fraw.githubusercontent.com%2Fsamchon%2Fshopping-backend%2Frefs%2Fheads%2Fmaster%2Fpackages%2Fapi%2Fswagger.json)
+  - Shopping A.I. Chatbot Application: [https://nestia.io/chat/shopping](/chat/shopping)
+  - Shopping Backend Repository: https://github.com/samchon/shopping-backend
+  - Shopping Swagger Document (`@nestia/editor`): [https://nestia.io/editor/?url=...](https://nestia.io/editor/?simulate=true&e2e=true&url=https%3A%2F%2Fraw.githubusercontent.com%2Fsamchon%2Fshopping-backend%2Frefs%2Fheads%2Fmaster%2Fpackages%2Fapi%2Fswagger.json)
 
 The above demonstration video shows Shopping A.I. chatbot built with Nestia.
 
 As you can see, in the Shopping A.I. chatbot application, the user can do everything written in the Swagger documents just by conversation texts. Searching products, taking orders, checking delivery status, user can do these things by chatting texts.
 
-Just by delivering the Swagger document, Super A.I. chatbot performing the LLM (Large Language Model) function calling is automatically commposed. The Super A.I. chatbot will select proper functions defined in the Swagger document by analyzing conversation contexts with the user. And then Super A.I. chatbot requests the user to write arguments for the selected functions by connversation text, and actually calls the API function with the argument. This is the key concept of the Nestia A.I. chatbot.loc
+Just by delivering the Swagger document, Super A.I. chatbot performing the LLM (Large Language Model) function calling is automatically composed. The Super A.I. chatbot will select proper functions defined in the Swagger document by analyzing conversation contexts with the user. And then Super A.I. chatbot requests the user to write arguments for the selected functions by conversation texts, and actually calls the API function with the argument. This is the key concept of the Nestia A.I. chatbot.
 
-In other words, every backend servers providing Swagger documents can be conversed to the A.I. chatbot. In the new A.I. era, you don't need to develop GUI (Graphical User Interface) application more. Just prepare swagger document, and let the A.I. chatbot to do the rest. The A.I. chatbot can replace your new GUI application, and it can be more efficient and user-friendly than the traditional GUI applications.
+In other words, every backend servers providing Swagger documents can be conversed to the A.I. chatbot. In the new A.I. era, you don't need to develop GUI (Graphical User Interface) application more. Just prepare swagger document, and let the A.I. chatbot to do the rest. The A.I. chatbot can replace the GUI application development, and it can be more efficient and user-friendly than the traditional GUI applications.
 
 
 
