Assign titles for each website

--- a/website/pages/docs/core/TypedException.mdx
+++ b/website/pages/docs/core/TypedException.mdx
@@ -1,3 +1,7 @@
+---
+title: Guide Documents > Core Library > TypedException
+---
+
 ## Outline
 ```typescript filename="@nestia/core" showLineNumbers
 export function TypedException<T extends object>(
