--- a/website/pages/docs/sdk/distribute.mdx
+++ b/website/pages/docs/sdk/distribute.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > S/W Development Kit > Distribution
+---
 import { Tabs } from 'nextra/components'
 
 ```typescript copy filename="nestia.config.ts" showLineNumbers {19}
