--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -1,3 +1,7 @@
+---
+title: Guide Documents > S/W Development Kit
+---
+
 <meta http-equiv="refresh" content="0; url=/docs/sdk/"></meta>
 
 The path has been changed to `/docs/sdk/`.
