--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -1,3 +1,7 @@
+---
+title: Guide Documents > S/W Development Kit > Swagger Document
+---
+
 <meta http-equiv="refresh" content="0; url=/docs/swagger/"></meta>
 
 The path has been changed to `/docs/swagger/`.
