--- a/website/pages/docs/swagger/chat.mdx
+++ b/website/pages/docs/swagger/chat.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Swagger Document > A.I. Chatbot 
+---
 import { Callout, Tabs } from 'nextra/components'
 
 ## Super A.I. Chatbot
