--- a/website/pages/docs/swagger/editor.mdx
+++ b/website/pages/docs/swagger/editor.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Swagger Document > TypeScript Swagger Editor
+---
 import { EDITOR_EXAMPLES } from "../../../src/constants/EDITOR_EXAMPLES";
 import EditorMovie from "../../../src/movies/editor/EditorMovie";
 import { HyperLink } from "../../../src/components/basic/HyperLink";
