--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -1,3 +1,6 @@
+---
+title: Home
+---
 import HomeLayout from "../src/components/home/HomeLayout";
 import HomeHeroMovie from "../src/movies/home/HomeHeroMovie";
 import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
