--- a/website/pages/docs/editor.mdx
+++ b/website/pages/docs/editor.mdx
@@ -1,3 +1,7 @@
+---
+title: Guide Documents > TypeScript Swagger Editor
+---
+
 <meta http-equiv="refresh" content="0; url=/docs/swagger/editor/"></meta>
 
 The path has been changed to `/docs/swagger/editor/`.
