--- a/website/pages/docs/migrate.mdx
+++ b/website/pages/docs/migrate.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Migration from Swagger to NestJS
+---
 <meta http-equiv="refresh" content="0; url=/docs/swagger/editor/"></meta>
 
 The path has been changed to `/docs/swagger/editor/`.
