--- a/website/pages/docs/sdk/simulator.mdx
+++ b/website/pages/docs/sdk/simulator.mdx
@@ -1,3 +1,7 @@
+---
+title: Guide Documents > S/W Development Kit > Mockup Simulator
+---
+
 <meta http-equiv="refresh" content="0; url=/docs/sdk/simulate/"></meta>
 
 The path has been changed to `/docs/sdk/simulate/`.
