--- a/website/pages/docs/swagger/index.mdx
+++ b/website/pages/docs/swagger/index.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Swagger Document
+---
 import { Tabs } from 'nextra/components'
 
 import { EDITOR_EXAMPLES } from "../../../src/constants/EDITOR_EXAMPLES";
