--- a/website/pages/docs/swagger/strategy.mdx
+++ b/website/pages/docs/swagger/strategy.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Swagger Document > Documentation Strategy
+---
 import { Callout, Tabs } from 'nextra/components'
 
 ## Description Comment
